--- a/hotsite/components/header/header.html
+++ b/hotsite/components/header/header.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
             <div class="cultura">
-            <p>Cultura</p>
+            <p>Cultura:</p>
             <select name="cultura" id="cultura">
                 <option value="Café">Café</option>
                 <option value="Milho">Milho</option>
