--- a/hotsite/components/footer/footer.html
+++ b/hotsite/components/footer/footer.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/hotsite/css/reset.css">
 <link rel="stylesheet" href="footer.css">
-<footer>
-    <p>Teste</p>
-</footer>
+
+<div class="footer">
+    <img class="linkedin" src="../../image/linkedin.png" /> 
+</div>
