--- a/hotsite/components/header/header.html
+++ b/hotsite/components/header/header.html
@@ -1,30 +1,8 @@
-<script type="text/javascript" src="/hotsite/js/header.js"></script>
 <link rel="stylesheet" href="/hotsite/css/reset.css">
 <link rel="stylesheet" href="header.css">
-<head>
-    <header>
-        <div class="header" id="color">
-            <nav>
-                <ul>
-                    <li><a href="/hotsite/page/index.html">Pagína Inicial</a></li>
-                    <div class="vl"></div>
-                    <li><a href="/hotsite/page/index.html">Metodologia</a></li>
-                    <div class="vl"></div>
-                    <li><a href="/hotsite/page/index.html">Regressão Linear</a></li>
-                    <div class="vl"></div>
-                    <li><a href="/hotsite/page/index.html">Bayers</a></li>
-                    <div class="vl"></div>
-                    <li><a href="/hotsite/page/index.html">MLP</a></li>
-                    <div class="vl"></div>
-                </ul>
-            </nav>
-            <div class="cultura">
-            <p>Cultura:</p>
-            <select name="cultura" id="cultura">
-                <option value="Café">Café</option>
-                <option value="Milho">Milho</option>
-            </select>
-            </div>
-        </div>
-    </header>
-</head>
+
+<header>
+  <div class="header">
+    Analise de algoritmos 
+  </div>
+</header>
