--- a/hotsite/css/index.css
+++ b/hotsite/css/index.css
@@ -1,44 +1,89 @@
 .header{
-    background-color: #54EB21;
+    background-color: #7777a7;
     display: flex; 
-    height: 80%;
     padding: 1rem;
+    width: 100%;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: White;
+    font-weight: bold;
+    /* z-index:1000; */
 }
 
-iframe{
-    width: 80%;
+.page{
+    display: flex;
 }
 
 .row{
     margin-left: 2rem;
+    width: 90%;
 }
 
 .sideBar{
-    border-right: 1px solid black;
+    top: 1%;
+    border-right: 2px solid #7777a7;
+    position: relative;
+    justify-content: center;
 }
 
 .content{
-    padding-top: 2rem;
-    /* padding-left: 10%;
-    padding-right: 15%; */
+    position: relative;
+    top: 1%;
+    max-width: 95%;
+}
+
+.subTitle{
+    padding-left: 2rem;
+}
+
+p{
+    padding-left: 3rem;
+    width: 100%;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 50%;
+    margin-left: 25%;
+  }
+  
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-align: center;
+}
+
+th{
+    font-weight: bold;
+}
+  
+tr:nth-child(even) {
+    background-color: #7777a7b6;
 }
 
 footer{
-    background-color: #4040ff;
-    display: flex;
+    background-color: #7777a7;
     position: fixed;
-    justify-content: center;
     right: 0;
     bottom: 0;
-    width: 8em;
+    width: 3em;
     height: 7%;
-    margin-top: -2.5em;
     border-radius: 20px 0 0 0;
+    align-content: right;
 }
 
-footer > img {
-    size: 2px;
+.resultados {
+    width: 85%;
+    margin-left: 8.5%;
+    height: 7.5%;
 }
+
+.github {
+    padding: 5px;
+    width: 3.5vw;
+  }
