--- a/hotsite/components/footer/footer.html
+++ b/hotsite/components/footer/footer.html
@@ -2,5 +2,5 @@
 <link rel="stylesheet" href="footer.css">
 
 <div class="footer">
-    <img class="linkedin" src="../../image/linkedin.png" /> 
+    <img class="linkedin" src=".././hotsite/image/linkedin.png" /> 
 </div>
